--- a/src/app/style/globals.scss
+++ b/src/app/style/globals.scss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "preflight";
+
 /* width */
 ::-webkit-scrollbar {
   width: 0.65rem;
@@ -39,45 +41,3 @@
   background: rgb(232, 163, 255);
 }
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: Roboto, sans-serif;
-  background: #000;
-  overscroll-behavior-y: none;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.spinner {
-  display: none !important;
-}
-
-.dark .enter {
-  background: rgb(29, 32, 44) !important;
-  color: #fff;
-  border: none;
-}
-
-.enter {
-  background: rgb(245, 245, 245) !important;
-  border: 1px solid rgb(0, 0, 0, 0.1);
-}
-
-.dark .tippy-tooltip-content {
-  @apply p-2;
-  color: #fff;
-}
-
-.tippy-tooltip-content {
-  @apply p-2;
-  color: #000;
-}
