--- a/src/app/_home.scss
+++ b/src/app/_home.scss
@@ -4,7 +4,7 @@
   .avatar-container {
     @apply mt-36 mb-4 flex flex-row justify-center items-center;
     .avatar {
-      @apply w-28 md:w-48 rounded-full outline shadow-lg dark:shadow-purple-900 shadow-purple-300;
+      @apply w-28 md:w-48 rounded-full outline shadow-lg dark:shadow-primary-dark shadow-primary;
     }
   }
 
