--- a/src/components/Contact/_MessageComponent.scss
+++ b/src/components/Contact/_MessageComponent.scss
@@ -1,5 +1,5 @@
 .message-component {
-  @apply md:col-span-2 h-auto min-h-[21.5rem] row-span-3 bg-opacity-50 bg-white dark:bg-white/5 rounded-md p-4 border border-zinc-800/50;
+  @apply md:col-span-2 h-auto min-h-[21.5rem] row-span-3 bg-opacity-50 bg-white/30 dark:bg-white/5 rounded-md p-4 border border-zinc-800/50;
   .success-message {
     @apply w-full h-full flex items-center justify-center text-gray-400 text-sm;
   }
@@ -9,11 +9,11 @@
   }
 
   .input-field {
-    @apply w-full p-2 rounded-md bg-slate-300/50 dark:bg-slate-200/5 text-sm placeholder:text-gray-600 dark:placeholder:text-slate-200/20;
+    @apply w-full p-2 rounded-md bg-slate-300/25 dark:bg-slate-200/5 text-sm placeholder:text-gray-600 dark:placeholder:text-slate-200/20 focus:outline-primary dark:focus:outline-primary-dark;
   }
 
   .text-box {
-    @apply w-full min-h-[9rem] p-2 h-36 mb-4 rounded-md bg-slate-300/50 dark:bg-slate-200/5 text-sm placeholder:text-gray-600 dark:placeholder:text-slate-200/20;
+    @apply w-full min-h-[9rem] p-2 h-36 mb-4 rounded-md bg-slate-300/25 dark:bg-slate-200/5 text-sm placeholder:text-gray-600 dark:placeholder:text-slate-200/20 focus:outline-primary dark:focus:outline-primary-dark;
   }
 
   .action-container {
